k8s-prod/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: three-tier-app
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: subratasikdar2021/3-tier-devsecops-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: three-tier-app
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: backend
